[tool.poetry]
name = "oai-notebooks"
version = "0.1.0"
description = ""
authors = ["Natanael Arndt <arndtn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sickle = "^0.7.0"
ipywidgets = "^8.1.2"
jupyter = "^1.0.0"
notebook = "^7.1.2"
rdflib = {git = "https://github.com/white-gecko/rdflib", rev = "feature/implementsOptsForRdf2Dot"}
pydotplus = "^2.0.2"
graphviz = "^0.20.3"
lxml = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
